try another way to prevent zooming on ios

--- a/src/components/editor/CodemirrorEditor/codemirror-styles.css
+++ b/src/components/editor/CodemirrorEditor/codemirror-styles.css
@@ -1,3 +1,6 @@
 .cm-theme {
   height: 100%;
 }
+.cm-content {
+  touch-action: pan-x pan-y;
+}
